...
      captureError(error, {
        flow: 'RecuperationQR',
        step: 'initSaveQr',
        critical: true,
      });
      Alert.alert('Error', error.message, [
        {text: 'OK', style: 'default'},
        {text: 'Abrir configuración', onPress: () => openSettings()},
      ]);
    } 
  };

  const saveData = async () => {
...
        <CAlert testID="recuperationFileWarning" message={String.enterPinInfo} />
      </KeyBoardAvoidWrapper>

      <View testID="recuperationFileFooter" style={styles.ph20}>
        <CAlert testID="recuperationFileWarning" status="warning" message={String.backupFileWarning} />
        <CButton
          testID="recuperationFileSaveButton"
          title={pin === null ? String.enterPin : saving ? String.downloadingBackup : saveSuccess ? String.backupFileSuccess : String.downloadBackup}
          onPress={initSaveQr}
          disabled={pin === null || saving}
          variant={saveSuccess ? 'outlined' : 'default'}
          frontIcon={
            saving ? (
...
