...
    "Confirma el nuevo PIN de acceso. Este PIN protegerá tu acceso a Tu Voto Decide. ",
  pinChange: "Introduce tu pin actual para confirmar y cambiar tu pin",
  verifyingPin: "Verificando PIN...",
  btnCheckData: "Verificar datos",
  btnContinue: "Continuar",
  //page 9
  confirmPinTitle: "Confirma tu PIN",
  waitForPinUpdate: "Actualizando PIN, por favor espera...",
  confirmPinDescription:
    "Vuelve a ingresar el mismo PIN para verificar que lo escribiste correctamente.",
  confirmPinButton: "Confirmar PIN",
  incorrectPinError: "PIN incorrecto. Intenta de nuevo",
  loading: "Cargando...",
...
  myWitnessesDescription: "Revisa tu historial",
  networkError: "Error de red, revise su conexión a internet.",
  registerPlace: "Registrar recinto",
  registerPlaceDescription: "Registra tu recinto para recibir avisos.",
  changePlace: "Cambiar recinto",
  changePlaceDescription: "Actualiza el recinto que tienes registrado.",
  backupAccount: "Asegura tu cuenta",
  backupAccountDescription: "Guarda un archivo de respaldo.",

  // Buscar Mesa Screen
  searchTable: "Buscar mesa",
  loadingTables: "Cargando mesas...",
  searching: "Buscando...",
...
