...
            onPress={onPressLoginUser}
            title={String.connectBtnLogin}
            type={'B16'}
            containerStyle={localStyle.btnStyle}
            color={colors.white}
            bgColor={commonColor.gradient2}
            testID="connectLoginButton"
          />

          {/*<CButton
            onPress={onLoginWithWira}
            title={String.signInWithWira}
            type={'B16'}
...
