...
        <View style={styles.ml10}>{actionIcon}</View>
      </TouchableOpacity>
    );
  };

  return (
    <CSafeAreaView testID="myGuardiansStatusContainer">
      <CHeader testID="myGuardiansStatusHeader" title={String.guardiansTitleStatus} isHideBack />
      <KeyboardAvoidingView testID="myGuardiansStatusKeyboardWrapper" style={[styles.flexGrow1, styles.ph20]}>
        <CText testID="myGuardiansStatusDescription" type={'B16'} align={'center'} marginTop={15}>
          {String.guardiansDescriptionStatus}
        </CText>
        <View>
...
