...
            ]}
            tintColor={colors.primary}
            offTintColor={colors.grayScale500}
          />

          <TouchableOpacity
            testID="recoveryFileUploadCard"
            style={[local.uploadCard, (!pin || loading) && local.uploadCardDisabled]}
            onPress={onUploadPress}
            disabled={!pin || loading}
            activeOpacity={0.8}
          >
            <CText type="R14" align="center" style={styles.boldText}>
...
          {errorMsg && <CAlert status='error' message={errorMsg} testID="recoveryFileLegacyDataError" />}
        </View>
      </KeyBoardAvoidWrapper>

      <View testID="recoveryFileFooter" style={local.footer}>
        <CButton
          testID="recoveryFileContinueButton"
          title={String.continueButton}
          onPress={goSetPin}
          disabled={!payload || loading}
        />
      </View>
    </CSafeAreaViewAuth>
...
