...
              offTintColor={colors.grayScale500}
            />
          </View>

          <CButton
            title={String.btnContinue}
            testID="changePinNewContinueButton"
            disabled={otp.length !== 4}
            onPress={onPressContinue}
          />
        </View>
      </KeyBoardAvoidWrapper>
    </CSafeAreaViewAuth>
...
