...
      </View>
      <KeyBoardAvoidWrapper
        contentContainerStyle={styles.flexGrow1}
        testID="loginUserKeyboardContainer">
        <View
          style={localStyle.mainContainer}
          testID="loginUserContentContainer">
          <View>
            <CText
              type={'B24'}
              style={localStyle.headerTextStyle}
              align={'center'}
              testID="loginUserTitle">
...
