...
            </View>
          </TouchableOpacity>
        </View>
      )}

      {/* Main Content */}
      <View testID="photoConfirmationContent" style={styles.content}>
        {shouldShowWorksheetMismatchWarning && (
          <View
            style={[
              styles.compareContainer,
              { borderColor: '#B42318', backgroundColor: '#FEF3F2' },
            ]}>
...
                  </>
                )}
              </View>
            </View>

            <TouchableOpacity
              testID="photoConfirmationPublishButton"
              style={styles.publishButton}
              onPress={verifyAndUpload}>
              <CText
                testID="photoConfirmationPublishButtonText"
                style={styles.publishButtonText}>
                {'Siguiente'}
...
        animationType="fade"
        onRequestClose={closeModal}>
        <View
          testID="photoConfirmationModalOverlay"
          style={modalStyles.modalOverlay}>
          <View
            testID="photoConfirmationModalContainer"
            style={modalStyles.modalContainer}>
            {step === 0 && (
              <>
                <View
                  testID="photoConfirmationModalWarningIcon"
                  style={modalStyles.iconCircleWarning}>
...
                      testID="photoConfirmationModalCancelText"
                      style={modalStyles.cancelButtonText}>
                      {I18nStrings.cancel}
                    </CText>
                  </TouchableOpacity>
                  <TouchableOpacity
                    testID="photoConfirmationModalConfirmButton"
                    style={modalStyles.confirmButton}
                    onPress={
                      isWorksheetMode
                        ? confirmWorksheetUpload
                        : confirmPublishAndCertify
                    }>
...
                  testID="photoConfirmationModalFinishedButtons"
                  style={[
                    modalStyles.buttonContainer,
                    { marginTop: getResponsiveSize(12, 16, 20) },
                  ]}>
                  <TouchableOpacity
                    testID="photoConfirmationModalGoHomeButton"
                    style={modalStyles.confirmButton}
                    onPress={handleFinish}>
                    <CText
                      testID="photoConfirmationModalGoHomeText"
                      style={modalStyles.confirmButtonText}>
                      {'Ir al Inicio'}
...
