appId: com.tuvotodecide
---
- tapOn:
    id: selectRecuperationGuardiansOption
- tapOn:
    id: findMyUserIdInput
- inputText: ${ID_NUMBER}
- doubleTapOn:
    id: findMyUserSearchButton
    delay: 100
- runFlow:
    when:
        true: ${TEST_TYPE == 'pass'}
    file: manageGoodCases/validGuardianFlow.yaml
- runFlow:
    when:
        true: ${TEST_TYPE == 'fail'}
    file: manageBadCases/assertBadGuardian.yaml
