appId: com.tuvotodecide
---
- runFlow:
    when:
        true: ${RECORD_TYPE == 'new'}
    file: ../cases/doesNotExists.yaml

- runFlow:
    when:
        true: ${RECORD_TYPE == 'submited'}
    file: ../cases/doesExists.yaml


# Capturar o seleccionar imagen
- runFlow:
    when:
        true: ${CAPTURE_TYPE == 'camera'}
    file: ../captureMethod/cameraCapture.yaml

- runFlow:
    when:
        true: ${CAPTURE_TYPE == 'gallery'}
    file: ../captureMethod/galleryCapture.yaml

# Esperar a que la imagen esté lista y visible
- extendedWaitUntil:
    visible:
      id: cameraScreenFooterAnalyzeButton
    timeout: 5000

# Analizar la foto capturada
- assertVisible:
    id: cameraScreenFooterAnalyzeButton
    
- tapOn:
    id: cameraScreenFooterAnalyzeButton

# Esperar a que se complete el análisis y se cargue la pantalla de revisión
- extendedWaitUntil:
    visible:
      id: baseRecordReviewScreenContainer
    timeout: 40000

# Verificar botón de siguiente
- tapOn:
    id: baseRecordReviewScreenActionButtonsButton_0

# Verificar elementos de la pantalla de confirmación
- assertVisible:
    id: photoConfirmationContent

# Publicar y certificar el acta
- tapOn:
    id: photoConfirmationPublishButton

# Verificar que el modal de confirmación esté visible
- assertVisible:
    id: photoConfirmationModalContainer

# Confirmar la publicación
- tapOn:
    id: photoConfirmationModalConfirmButton

- tapOn:
    id: photoConfirmationModalGoHomeButton

# Esperar mensaje de error
- extendedWaitUntil:
    visible:
      id: uploadErrorMessageContainer
    timeout: 60000
